--- a/themes/trf/sass/modules/_featured-categories.scss
+++ b/themes/trf/sass/modules/_featured-categories.scss
@@ -61,6 +61,7 @@ $featured-categories__item-width: $imagestyle-product_medium;
     }
 
     .container-24 {
+      margin: 0 !important;
       padding-left: 0 !important;
       width: auto !important;
     }
